--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@types/node": "^20.11.6",
     "@types/uuid": "^9.0.8",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-newline-destructuring": "^1.2.1",
     "prettier": "3.2.4",
     "rollup": "^4.9.6",
     "rollup-plugin-ts": "^3.4.5",
